Update deprecated use of URL